[package]
name = "rlolicon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
log = "0.4.17"
env_logger = "0.9.0"
actix-web = "4.0.0-rc.3"